fix path to logo

--- a/src/pug/components/header.pug
+++ b/src/pug/components/header.pug
@@ -4,7 +4,7 @@
 header.header
 	.header__container
 		a(href="/").header__logo
-			img(src="../img/logo.svg", alt="TOXIN")
+			img(src="img/logo.svg", alt="TOXIN")
 		button.header__burger.btn-burger.js-btn-burger
 			span.btn-burger__icon.btn-burger__icon_open
 		.header__wrap.js-menu
