--- a/src/pug/main-layout.pug
+++ b/src/pug/main-layout.pug
@@ -19,3 +19,4 @@ html(lang='ru')
 			include ./components/header.pug
 			block main
 			include ./components/footer.pug
+			include ./components/sign-up.pug
