add sign form, thinking about what datepicker use

--- a/src/pug/components/header.pug
+++ b/src/pug/components/header.pug
@@ -28,7 +28,7 @@ header.header
 							each link in subMenu2
 								li.header-submenu__item
 									a(href="#").header-submenu__link= link
-			button.header__sign-in.btn
+			button.header__sign-in.btn.btn_height34
 				span войти
-			button.header__sign-up.btn.btn_fill
+			button.header__sign-up.btn.btn_height34.btn_fill.js-tgl-popup
 				span зарегистрироваться
