--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -4,5 +4,8 @@
 @import "ui";
 @import "header";
 @import "burger";
+@import "popup";
+@import "forms";
+@import "jq-ui-calendar";
 @import "home";
 @import "footer";
