--- a/src/scss/_header.scss
+++ b/src/scss/_header.scss
@@ -47,7 +47,7 @@
 			display: block;
 			width: 100%;
 			height: 100vh;
-			padding: 70px 12px 20px;
+			padding: 70px 24px 20px;
 			background-color: $white;
 
 			&_translate {
@@ -70,8 +70,9 @@
 	&__sign-in {
 		margin-right: 20px;
 
-		@media (max-width: $xs) {
-			margin-right: 12px;
+		@media (max-width: $xxs) {
+			margin-right: 0;
+			margin-bottom: 12px;
 		}
 	}
 }
