--- a/src/scss/_ui.scss
+++ b/src/scss/_ui.scss
@@ -11,9 +11,14 @@ body {
 	padding: 0;
 }
 
+html {
+  height: -webkit-fill-available;
+}
+
 body {
 	position: relative;
 	background-color: $gray;
+	min-height: -webkit-fill-available;
 }
 
 .root {
@@ -44,8 +49,13 @@ section {
 
 a,
 button {
-	outline: none !important;
 	cursor: pointer;
+}
+
+a,
+button,
+input {
+	outline: none !important;
 }
 
 ul,
@@ -97,7 +107,8 @@ p {
 .btn {
 	position: relative;
 	display: inline-block;
-	height: 34px;
+	height: 44px;
+	min-width: 100px;
 	padding: 9px 20px 10px;
 	text-transform: uppercase;
 	border: none;
@@ -121,7 +132,7 @@ p {
 		transition: opacity .3s ease;
 	}
 
-	&:hover, &:focus {
+	&:hover {
 		&::before {
 			opacity: .5;
 		}
@@ -149,11 +160,41 @@ p {
 			color: $white;
 		}
 	}
-}
 
-.formfield {
-	position: relative;
-	display: block;
-	width: 100%;
-	height: 100%;
+	&_height34 {
+		height: 34px;
+	}
+
+	&_with-arrow {
+		width: 100%;
+		padding-right: 36px;
+		padding-left: 36px;
+
+		span {
+			width: 100%;
+			&::before,
+			&::after {
+				content: "";
+				position: absolute;
+				top: 50%;
+				right: 0;
+				display: block;
+			}
+	
+			&::before {
+				transform: translate(20px, -50%) rotate(45deg);
+				width: 11px;
+				height: 11px;
+				border-top: 2px solid $white;
+				border-right: 2px solid $white;
+			}
+
+			&:after {
+				transform: translate(20px, -50%);
+				width: 13px;
+				height: 2px;
+				background-color: $white;
+			}
+		}
+	}
 }
