--- a/src/scss/_header.scss
+++ b/src/scss/_header.scss
@@ -1,5 +1,6 @@
 .header {
 	position: relative;
+	z-index: 9;
 	display: flex;
 	justify-content: center;
 	padding: 15px;
@@ -10,7 +11,6 @@
 		display: flex;
 		align-items: center;
 		justify-content: space-between;
-		max-width: 1140px;
 		width: 100%;
 	}
 
@@ -38,12 +38,12 @@
 		display: flex;
 		align-items: center;
 
-		@media (max-width: $sm) {
+		@include media(sm) {
 			position: absolute;
 			z-index: 4;
 			top: 0;
 			right: 0;
-			transform: translateX(100%);
+			transform: translateX(100vw);
 			display: block;
 			width: 100%;
 			height: 100vh;
@@ -61,7 +61,7 @@
 		display: block;
 		margin-right: 20px;
 
-		@media (max-width: $sm) {
+		@include media(sm) {
 			margin-right: 0;
 			margin-bottom: 20px;
 		}
@@ -70,7 +70,7 @@
 	&__sign-in {
 		margin-right: 20px;
 
-		@media (max-width: $xxs) {
+		@include media(xxs) {
 			margin-right: 0;
 			margin-bottom: 12px;
 		}
@@ -80,7 +80,7 @@
 .header-menu {
 	display: flex;
 
-	@media (max-width: $sm) {
+	@include media(sm) {
 		display: block;
 	}
 
@@ -90,7 +90,7 @@
 		margin-right: 20px;
 		line-height: 1;
 
-		@media (max-width: $sm) {
+		@include media(sm) {
 			margin-right: 0;
 			margin-bottom: 10px;
 		}
@@ -115,7 +115,7 @@
 				border-bottom: 2px solid $dark50;
 			}
 
-			@media (min-width: $sm) {
+			@include media-up(sm) {
 				&:hover {
 					> .header-submenu {
 						visibility: visible;
@@ -124,7 +124,7 @@
 				}
 			}
 
-			@media (max-width: $sm) {
+			@include media(sm) {
 				padding-right: 0;
 				&::after {
 					content: none;
@@ -145,14 +145,14 @@
 		color: $dark50;
 		transition: color .2s ease;
 
-		@media (min-width: $sm) {
+		@include media-up(sm) {
 			&:hover {
 				text-decoration: none;
 				color: $dark75;
 			}
 		}
 
-		@media (max-width: $sm) {
+		@include media(sm) {
 			width: 100%;
 		}
 
@@ -168,7 +168,7 @@
 		left: 50%;
 		transform: translate(-50%, 100%);
 
-		@media (max-width: $sm) {
+		@include media(sm) {
 			position: relative;
 			bottom: auto;
 			left: auto;
@@ -189,7 +189,7 @@
 	opacity: 0;
 	transition: opacity .3s ease;
 
-	@media (max-width: $sm) {
+	@include media(sm) {
 		visibility: visible;
 		opacity: 1;
 		border: none;
@@ -218,14 +218,14 @@
 		color: $dark50;
 		transition: color .2s ease;
 
-		@media (min-width: $sm) {
+		@include media-up(sm) {
 			&:hover {
 				text-decoration: none;
 				color: $dark75;
 			}
 		}
 
-		@media (max-width: $sm) {
+		@include media(sm) {
 			width: 100%;
 			padding: 3px 10px;
 		}
