--- a/src/scss/_ui.scss
+++ b/src/scss/_ui.scss
@@ -1,9 +1,3 @@
-*,
-*::before,
-*::after {
-	box-sizing: border-box;
-}
-
 html,
 body {
 	overflow: hidden;
@@ -12,7 +6,7 @@ body {
 }
 
 html {
-  height: -webkit-fill-available;
+	height: -webkit-fill-available;
 }
 
 body {
@@ -31,7 +25,7 @@ body {
 	-webkit-overflow-scrolling: touch;
 	font-family: "Montserrat", sans-serif;
 	font-size: 14px;
-	line-height: 24px;
+	line-height: 1;
 	font-weight: 400;
 	background-color: $gray;
 
@@ -106,10 +100,11 @@ p {
 
 .btn {
 	position: relative;
-	display: inline-block;
+	display: inline-flex;
+	align-items: center;
+	justify-content: center;
 	height: 44px;
-	min-width: 100px;
-	padding: 9px 20px 10px;
+	padding: 4px 20px;
 	text-transform: uppercase;
 	border: none;
 	border-radius: 22px;
@@ -180,7 +175,7 @@ p {
 				right: 0;
 				display: block;
 			}
-	
+
 			&::before {
 				transform: translate(20px, -50%) rotate(45deg);
 				width: 11px;
@@ -196,5 +191,42 @@ p {
 				background-color: $white;
 			}
 		}
+	}
+}
+
+.main {
+	&__sliders-wraper {
+		position: relative;
+	}
+
+	&__slider {
+		display: block;
+		width: 68%;
+
+		@include media(xs) {
+			width: 100%;
+		}
+	}
+
+	&__sm-slider {
+		display: block;
+		width: 32%;
+
+		@include media(xs) {
+			position: absolute;
+			bottom: 0;
+			left: 0;
+			display: flex;
+			align-items: center;
+			width: 100%;
+			height: 130px;
+			margin: 0 auto;
+			padding: 0 24px;
+			background-color: rgba(#000, 0.5);
+		}
+	}
+
+	&__room-info {
+		position: relative;
 	}
 }
