--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -1,4 +1,5 @@
-@import "~normalize.css";
+@import "~slick-carousel/slick/slick.scss";
+// @import "boot";
 @import "vars";
 @import "fonts";
 @import "ui";
@@ -8,4 +9,6 @@
 @import "forms";
 @import "jq-ui-calendar";
 @import "home";
+@import "sliders";
+@import "room-info";
 @import "footer";
