--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -1,7 +1,6 @@
 @import "~slick-carousel/slick/slick.scss";
-// @import "boot";
 @import "vars";
-@import "fonts";
+// @import "fonts";
 @import "ui";
 @import "header";
 @import "burger";
