--- a/src/scss/_fonts.scss
+++ b/src/scss/_fonts.scss
@@ -1,4 +1,16 @@
 @font-face {
+	font-family: "OpenSans";
+	src: url("../assets/fonts/OpenSans/OpenSans-Regular.ttf") format("truetype");
+	font-weight: 400;
+}
+
+@font-face {
+	font-family: "OpenSans";
+	src: url("../assets/fonts/OpenSans/OpenSans-Bold.ttf") format("truetype");
+	font-weight: 700;
+}
+
+@font-face {
 	font-family: "Quicksand";
 	src: url("../assets/fonts/Quicksand/Quicksand-Regular.ttf") format("truetype");
 	font-weight: 400;
