--- a/src/scss/_forms.scss
+++ b/src/scss/_forms.scss
@@ -46,15 +46,40 @@
 	}
 }
 
+input[type="number"] {
+	-moz-appearance: textfield;
+
+	&::-webkit-outer-spin-button,
+	&::-webkit-inner-spin-button {
+		-webkit-appearance: none;
+	}
+}
+
 .formfield {
 	display: block;
 	width: 100%;
-	height: 44px;
+	min-height: 44px;
+
+	&_half-width {
+		width: calc(50% - 10px);
+	}
+
+	&__label {
+		display: block;
+		margin-bottom: 6px;
+		font-family: "Montserrat", sans-serif;
+		font-size: 12px;
+		line-height: 15px;
+		font-weight: 700;
+		cursor: pointer;
+		color: $dark;
+		text-transform: uppercase;
+	}
 
 	&__input {
 		display: block;
 		width: 100%;
-		padding: 13px 15px;
+		padding: 12px 15px;
 		border: 1px solid rgba(31, 32, 65, 0.25);
 		border-radius: 4px;
 		font-family: "Montserrat", sans-serif;
@@ -208,6 +233,97 @@
 		@include media(xs) {
 			margin-bottom: 10px;
 			padding-right: 0;
+		}
+	}
+}
+
+.form-booking {
+	display: block;
+	padding: 40px 30px 30px;
+	background-color: $white;
+	border: 1px solid rgba(0, 0, 0, 0.12);
+	box-shadow: 0px 0px 25px rgba(0, 0, 0, 0.2);
+	border-radius: 4px;
+
+	&__head {
+		margin-bottom: 20px;
+	}
+
+	&__date {
+		display: flex;
+		justify-content: space-between;
+	}
+}
+
+.form-booking-head {
+	display: flex;
+	justify-content: space-between;
+	align-items: center;
+
+	&__left {
+		display: flex;
+		align-items: flex-end;
+
+		span {
+			&:first-child {
+				display: inline-block;
+				margin-right: 5px;
+				font-family: "Quicksand", sans-serif;
+				font-size: 24px;
+				line-height: 30px;
+				font-weight: 700;
+
+				&::before {
+					content: "№";
+					display: inline-block;
+					margin-right: 4px;
+					font-family: "Quicksand", sans-serif;
+					font-size: 14px;
+					line-height: 18px;
+					font-weight: 700;
+				}
+			}
+
+			&:last-child {
+				display: inline-block;
+				padding-bottom: 5px;
+				font-family: "Montserrat", sans-serif;
+				font-size: 12px;
+				line-height: 15px;
+				font-weight: 700;
+				color: $purple;
+				text-transform: uppercase;
+			}
+		}
+	}
+
+	&__right {
+		display: flex;
+
+		span {
+			display: inline-block;
+			font-family: "Montserrat", sans-serif;
+			line-height: 18px;
+			color: $dark50;
+
+			&:first-child {
+				margin-right: 2px;
+				font-size: 14px;
+				font-weight: 700;
+
+				&::after {
+					content: "₽";
+					display: inline-block;
+					font-family: "Montserrat", sans-serif;
+					font-size: 14px;
+					line-height: 18px;
+				}
+			}
+
+			&:last-child {
+				font-size: 12px;
+				font-weight: 400;
+			}
 		}
 	}
 }
