--- a/src/scss/_jq-ui-calendar.scss
+++ b/src/scss/_jq-ui-calendar.scss
@@ -17,7 +17,7 @@
 }
 
 .ui-datepicker-title {
-	font-family: "Quicksand", sans-serif;
+	font-family: "OpenSans", sans-serif;
 	font-size: 19px;
 	line-height: 24px;
 	font-weight: 700;
