--- a/src/scss/_room-info.scss
+++ b/src/scss/_room-info.scss
@@ -1,29 +1,53 @@
 .room-info {
 	display: block;
-	padding-top: 70px;
+	padding: 70px 0;
 	background-color: $white;
 
-	&__left {
+	&__block {
 		display: flex;
+		justify-content: space-between;
+	}
+
+	&__left {
+		display: block;
+		width: calc(#{_col(7, lg)} + 16px);
+	}
+
+	&__right {
+		position: relative;
+		display: block;
+		width: calc(#{_col(4, lg)} - 16px);
+	}
+
+	&__form {
+		position: sticky;
+		left: 0;
+		top: 70px;
+	}
+
+	&__wrap {
+		display: flex;
+		margin-bottom: 30px;
 	}
 }
 
 .info-top {
 	display: block;
+	min-width: calc(#{_col(4, lg)} - 40px);
 
 	&__title {
 		display: block;
 		margin-bottom: 20px;
-		font-family: "Quicksand", sans-serif;
+		font-family: "OpenSans", sans-serif;
 		font-size: 19px;
 		line-height: 24px;
 		font-weight: 700;
 		color: $dark;
 	}
 
-	&__list {
-		margin-bottom: 30px;
-	}
+	// &__list {
+	// 	margin-bottom: 30px;
+	// }
 }
 
 .info-list {
@@ -40,12 +64,21 @@
 
 .info-item {
 	display: flex;
+	min-height: 48px;
 
-	&__img {
-		display: block;
+	&__img-wrap {
+		display: flex;
+		align-items: center;
+		justify-content: center;
 		width: 48px;
 		height: 48px;
 		margin-right: 10px;
+
+		img {
+			display: block;
+			width: auto;
+			height: auto;
+		}
 	}
 
 	&__content {
@@ -86,7 +119,7 @@
 			fill: $purple;
 
 			&:first-of-type {
-				font-family: "Quicksand", sans-serif;
+				font-family: "OpenSans", sans-serif;
 				font-size: 24px;
 				line-height: 30px;
 			}
@@ -144,6 +177,174 @@
 			&::before {
 				background: linear-gradient(180deg, #919191 0%, #3D4975 100%);
 			}
+		}
+	}
+}
+
+.comments {
+	&__title {
+		display: flex;
+		justify-content: space-between;
+		align-items: center;
+		margin-bottom: 20px;
+
+		span {
+			&:first-child {
+				font-family: "OpenSans", sans-serif;
+				font-size: 19px;
+				line-height: 24px;
+				font-weight: 700;
+			}
+
+			&:last-child {
+				font-family: "Montserrat", sans-serif;
+				font-size: 14px;
+				line-height: 1;
+				font-weight: 400;
+			}
+		}
+	}
+
+	&__cards {
+		display: block;
+		margin-bottom: 30px;
+	}
+
+	&__card {
+		margin-bottom: 20px;
+
+		&:last-child {
+			margin-bottom: 0;
+		}
+	}
+}
+
+.card {
+	display: block;
+
+	&__top {
+		margin-bottom: 12px;
+	}
+
+	&__content-wrap {
+		display: flex;
+	}
+
+	&__like {
+		margin-right: 18px;
+	}
+
+	&__content {
+		p {
+			display: block;
+			margin-bottom: 24px;
+			font-family: "Montserrat", sans-serif;
+			font-size: 14px;
+			line-height: 24px;
+			color: $dark75;
+
+			&:last-child {
+				margin-bottom: 0;
+			}
+		}
+	}
+}
+
+.card-top {
+	display: flex;
+
+	&__ava {
+		display: inline-block;
+		width: 48px;
+		height: 48px;
+		margin-right: 10px;
+		border-radius: 50%;
+		object-fit: cover;
+		object-position: 50% 50%;
+	}
+
+	&__wrap {
+		display: block;
+	}
+
+	&__name,
+	&__date {
+		display: block;
+		font-family: "Montserrat", sans-serif;
+		font-size: 14px;
+		line-height: 24px;
+		color: $dark75;
+	}
+
+	&__name {
+		font-weight: 700;
+	}
+
+	&__date {
+		font-weight: 400;
+	}
+}
+
+.rules {
+	display: flex;
+	justify-content: space-between;
+
+	&__block {
+		display: block;
+		min-width: calc(#{_col(4, lg)} - 40px);
+	}
+
+	&__title {
+		display: block;
+		margin-bottom: 18px;
+		font-family: "OpenSans", sans-serif;
+		font-size: 19px;
+		line-height: 24px;
+		font-weight: 700;
+	}
+
+	&__cancel-content {
+		display: block;
+		max-width: 342px;
+
+		p {
+			display: block;
+			font-family: "Montserrat", sans-serif;
+			font-size: 14px;
+			line-height: 24px;
+			color: $dark75;
+		}
+	}
+}
+
+.rules-list {
+	display: block;
+	max-width: 262px;
+
+	&__item {
+		position: relative;
+		display: block;
+		margin-bottom: 10px;
+		padding-left: 20px;
+		font-family: "Montserrat", sans-serif;
+		font-size: 14px;
+		line-height: 24px;
+		color: $dark75;
+
+		&:last-child {
+			margin-bottom: 0;
+		}
+
+		&::before {
+			content: "";
+			position: absolute;
+			top: 6px;
+			left: 0;
+			display: block;
+			width: 10px;
+			height: 10px;
+			border-radius: 50%;
+			background-color: $dark25;
 		}
 	}
 }
