--- a/src/scss/_forms.scss
+++ b/src/scss/_forms.scss
@@ -2,7 +2,7 @@
 	position: relative;
 	display: block;
 	width: 100%;
-	padding: 40px 30px 30px;
+	padding: 40px 29px 30px;
 	background-color: $white;
 
 	@include media(xs) {
@@ -118,6 +118,51 @@ input[type="number"] {
 			}
 		}
 	}
+
+	&__wrap {
+		position: relative;
+	}
+
+	&__dropdown {
+		position: relative;
+
+		&_open {
+			.dropdown {
+				border-color: $dark50;
+			}
+
+			.dropdown-list {
+				display: block;
+			}
+		}
+	}
+
+	&__icon {
+		position: absolute;
+		top: 1px;
+		right: 0;
+		display: block;
+		padding: 0;
+		width: 44px;
+		height: 42px;
+		border: none;
+		cursor: pointer;
+		background-color: transparent;
+
+		&::before {
+			content: "";
+			position: absolute;
+			top: 14px;
+			right: 16px;
+			transform: rotate(45deg);
+			display: block;
+			width: 8px;
+			height: 8px;
+			border-bottom: 2px solid $dark75;
+			border-right: 2px solid $dark75;
+		}
+	}
+
 }
 
 .radio-blocks {
@@ -239,7 +284,7 @@ input[type="number"] {
 
 .form-booking {
 	display: block;
-	padding: 40px 30px 30px;
+	padding: 40px 29px 30px;
 	background-color: $white;
 	border: 1px solid rgba(0, 0, 0, 0.12);
 	box-shadow: 0px 0px 25px rgba(0, 0, 0, 0.2);
@@ -250,8 +295,15 @@ input[type="number"] {
 	}
 
 	&__date {
+		position: relative;
+		z-index: 5;
 		display: flex;
 		justify-content: space-between;
+		margin-bottom: 20px;
+	}
+
+	&__dropdown {
+		margin-bottom: 20px;
 	}
 }
 
@@ -325,5 +377,174 @@ input[type="number"] {
 				font-weight: 400;
 			}
 		}
+	}
+}
+
+.dropdown {
+	display: flex;
+	align-items: center;
+	width: 100%;
+	height: 44px;
+	padding: 2px 44px 2px 15px;
+	border: 1px solid $dark25;
+	border-radius: 2px;
+	background-color: $white;
+	cursor: pointer;
+	transition: border-color 0.2s ease;
+
+	&:hover,
+	&:focus,
+	&:active {
+		border-color: $dark50;
+	}
+
+	&__total,
+	&__text {
+		display: inline-block;
+		font-family: "Montserrat", sans-serif;
+		font-size: 14px;
+		line-height: 18px;
+		font-weight: 400;
+		color: $dark75;
+	}
+
+	&__block {
+		position: absolute;
+		top: calc(100% - 1px);
+		left: 0;
+		display: none;
+		width: 100%;
+		max-height: 25vh;
+		padding: 7px 7px 13px 15px;
+		overflow: auto;
+		background-color: $white;
+		border: 1px solid $dark50;
+		border-bottom-right-radius: 2px;
+		border-bottom-left-radius: 2px;
+		box-shadow: 0px 10px 20px rgba(31, 32, 65, 0.05);
+	}
+
+	&__list {
+		margin-bottom: 18px;
+	}
+
+	&__btns {
+		display: flex;
+		justify-content: space-between;
+	}
+}
+
+.dropdown-list {
+	display: block;
+	width: 100%;
+
+	&__item {
+		display: flex;
+		justify-content: space-between;
+		align-items: center;
+		margin-bottom: 8px;
+
+		&:last-child {
+			margin-bottom: 0;
+		}
+	}
+
+	&__label {
+		display: inline-block;
+		font-family: "Montserrat", sans-serif;
+		font-size: 12px;
+		line-height: 15px;
+		font-weight: 700;
+		color: $dark;
+		text-transform: uppercase;
+	}
+}
+
+.quantity {
+	display: flex;
+	justify-content: space-between;
+	width: 92px;
+
+	&__btn {
+		margin-right: 2px;
+
+		&:last-child {
+			margin-right: 0;
+		}
+	}
+
+	&__input {
+		display: inline-block;
+		border: none;
+		width: 28px;
+		height: 24px;
+		padding: 0;
+		font-family: "Montserrat", sans-serif;
+		font-size: 12px;
+		line-height: 15px;
+		font-weight: 700;
+		color: $dark;
+		text-align: center;
+	}
+}
+
+.price-list {
+	&__list {
+		display: block;
+		margin-bottom: 30px;
+	}
+
+	&__item {
+		margin-bottom: 10px;
+
+		&:last-child {
+			margin-bottom: 0;
+		}
+	}
+
+	&__total {
+		display: flex;
+		margin-bottom: 20px;
+
+		span {
+			display: inline-block;
+			font-weight: 700;
+			font-size: 19px;
+			line-height: 24px;
+			color: $dark;
+			white-space: nowrap;
+
+			&:first-child {
+				font-family: "OpenSans", sans-serif;
+			}
+
+			&:nth-child(2) {
+				width: 100%;
+				border-bottom: 1px dashed $dark25;
+			}
+
+			&:last-child {
+				font-family: "Quicksand", sans-serif;
+			}
+		}
+	}
+}
+
+.price-list-item {
+	display: flex;
+	justify-content: space-between;
+
+	&__wrap {
+		display: flex;
+		max-width: 67.3%;
+	}
+
+	&__text {
+		display: inline-block;
+		font-family: "Montserrat", sans-serif;
+		font-size: 14px;
+		line-height: 24px;
+		font-weight: 400;
+		color: $dark75;
 	}
 }
