--- a/src/scss/_popup.scss
+++ b/src/scss/_popup.scss
@@ -26,19 +26,19 @@
 		position: fixed;
 		width: 100%;
 		height: 100vh;
-		// height: calc(var(--vh, 1vh) * 100);
+		height: calc(var(--vh, 1vh) * 100);
 	}
 
 	&__bg {
 		z-index: 0;
-		background-color: transparent;
+		background-color: $dark25;
 	}
 
 	&__wrap {
 		position: relative;
 		width: 380px;
 		overflow-y: auto;
-		// max-height: calc(var(--vh, 1vh) * 100);
+		max-height: calc(var(--vh, 1vh) * 100);
 		// background-color: $white;
 
 		@include media(xs) {
