--- a/src/pug/pages/room-details.pug
+++ b/src/pug/pages/room-details.pug
@@ -126,15 +126,15 @@ block main
 								.rules__cancel-content
 									p Бесплатная отмена в течение 48 ч. После этого при отмене не позднее чем за 5 дн. до прибытия вы получите полный возврат за вычетом сбора за услуги.
 					.room-info__right
-						form.room-info__form.form-booking
+						form.room-info__form.form-booking(data-price="9990")
 							.form-booking__head.form-booking-head
 								.form-booking-head__left
 									span 888
 									span люкс
 								.form-booking-head__right
-									span 9 990
+									span.js-initial-price 0
 									span в сутки
-							.form-booking__date
+							.form-booking__date.js-calendar-parent
 								.formfield.formfield_half-width
 									label.formfield__label(for="date-start") прибытие
 									.formfield__wrap
@@ -147,49 +147,51 @@ block main
 										button.formfield__icon.js-btn-datepicker(type="button")
 								.js-range-datepicker
 							.form-booking__dropdown.formfield
-								label.formfield__label(for="date-start") гости
-								.formfield__dropdown.formfield__dropdown_open
-									.dropdown.js-dropdown
-										span.dropdown__total.js-guests-total
+								label.formfield__label.js-tgl-dropdown гости
+								.formfield__dropdown.js-dropdown-form
+									.dropdown.js-tgl-dropdown
 										span.dropdown__text.js-guests Сколько гостей
-										button.formfield__icon(type="button")
+									button.formfield__icon.js-tgl-dropdown(type="button")
 									.dropdown__block
 										ul.dropdown__list.dropdown-list
 											each item in dropdown
 												li.dropdown-list__item
 													label.dropdown-list__label #{item.label}
 													.dropdown-list__quantity.quantity
-														button(type="button").quantity__btn.quantity-btn.quantity-btn_minus -
-														input.quantity__input.js-current-total(id=item.id type="number" value="0" min="0" max="5" name=item.id)
-														button(type="button").quantity__btn.quantity-btn.quantity-btn_plus.quantity-btn_visible +
+														button(type="button").quantity__btn.quantity-btn.js-btn-dec -
+														input.quantity__input.js-current-total(id=item.id type="number" value="0" min="0" max="5" name=item.id readonly)
+														button(type="button").quantity__btn.quantity-btn.quantity-btn_visible.js-btn-inc +
 										.dropdown__btns
-											button.btn-purple.js-reset(type="button") очистить
-											button.btn-purple.j-sapply(type="button") применить
+											button.btn-purple.js-dropdown-reset(type="button") очистить
+											button.btn-purple.btn-purple_visible.js-dropdown-apply(type="button") применить
 							.form-booking__price-list.price-list
 								ul.price-list__list
 									li.price-list__item.price-list-item
 										.price-list-item__wrap
-											span.price-list-item__text 9 990₽ х
-											span.price-list-item__text 4 суток
-										span.price-list-item__total 39 960₽
+											span.price-list-item__text.price-list-item__text_price.js-initial-price 0
+											span.price-list-item__text.price-list-item__text_count.js-cnt-days 0 суток
+										span.price-list-item__text.price-list-item__text_price.js-price-multiples-days 0
 									li.price-list__item.price-list-item
 										.price-list-item__wrap
 											span.price-list-item__text Сбор за услуги:
-											span.price-list-item__info
-										span.price-list-item__total 0₽
+											.price-list-item__info.price-info i
+												p.price-info__tooltip Всё включено
+										span.price-list-item__text.price-list-item__text_price.js-service-price1 0
 									li.price-list__item.price-list-item
 										.price-list-item__wrap
 											span.price-list-item__text Сбор за дополнительные услуги:
-											span.price-list-item__info
-										span.price-list-item__total 300₽
+											.price-list-item__info.price-info i
+												p.price-info__tooltip За сервис
+										span.price-list-item__text.price-list-item__text_price.js-service-price2 300
 									li.price-list__item.price-list-item
 										.price-list-item__wrap
 											span.price-list-item__text Скидка:
-											span.price-list-item__info
-										span.price-list-item__total 2 179₽
+											.price-list-item__info.price-info i
+												p.price-info__tooltip По акции
+										span.price-list-item__text.price-list-item__text_price.js-discount 2179
 								.price-list__total
 									span Итого
 									span
-									span 38 081₽
+									span.js-total-price 0
 							button.form-booking__submit.btn.btn_fill.btn_with-arrow(type="submit")
 								span забронировать
