--- a/src/scss/_jq-ui-calendar.scss
+++ b/src/scss/_jq-ui-calendar.scss
@@ -3,7 +3,7 @@
 	z-index: 2;
 	left: 0;
 	top: calc(100% + 6px);
-	z-index: 1;
+	display: none;
 	width: 320px;
 	padding: 20px;
 	border: 1px solid $dark25;
