--- a/src/scss/_jq-ui-calendar.scss
+++ b/src/scss/_jq-ui-calendar.scss
@@ -10,6 +10,11 @@
 	border-radius: 4px;
 	background-color: $white;
 	box-shadow: 0px 10px 20px rgba(31, 32, 65, 0.05);
+
+	@include media(xs) {
+		left: 50%;
+		transform: translateX(-50%);
+	}
 }
 
 .ui-datepicker .ui-datepicker-prev,
