--- a/src/scss/_ui.scss
+++ b/src/scss/_ui.scss
@@ -350,7 +350,7 @@ p {
 		display: block;
 		width: 68%;
 
-		@include media(xs) {
+		@include media(sm) {
 			width: 100%;
 		}
 	}
@@ -359,7 +359,7 @@ p {
 		display: block;
 		width: 32%;
 
-		@include media(xs) {
+		@include media(sm) {
 			position: absolute;
 			bottom: 0;
 			left: 0;
@@ -370,6 +370,10 @@ p {
 			margin: 0 auto;
 			padding: 0 24px;
 			background-color: rgba(#000, 0.5);
+		}
+
+		@include media(xs) {
+			padding: 0 16px;
 		}
 	}
 
