fix header add form sigin

--- a/src/pug/components/header.pug
+++ b/src/pug/components/header.pug
@@ -59,7 +59,7 @@ header.header
 										each link in subMenu2
 											li.header-submenu__item
 												a(href="#").header-submenu__link= link
-						button.header__sign-in.btn.btn_height34
+						button.header__sign-in.btn.btn_height34.js-tgl-sign-in
 							span войти
-						button.header__sign-up.btn.btn_height34.btn_fill.js-tgl-popup
+						button.header__sign-up.btn.btn_height34.btn_fill.js-tgl-sign-up
 							span зарегистрироваться
