--- a/src/pug/main-layout.pug
+++ b/src/pug/main-layout.pug
@@ -19,4 +19,5 @@ html(lang='ru')
 			include ./components/header.pug
 			block main
 			include ./components/footer.pug
-			include ./components/popup.pug
+			include ./components/popup-sign-in.pug
+			include ./components/popup-sign-up.pug
