--- a/src/pug/components/sign-up.pug
+++ b/src/pug/components/sign-up.pug
@@ -28,5 +28,5 @@ form.form(action="#")
 			span перейти к оплате
 	.form__sign-block.sign-block
 		p.sign-block__desc Уже есть аккаунт на Toxin
-		button.btn(type="button", tabindex="10")
+		button.btn.js-tgl-sign-in(type="button", tabindex="10")
 			span войти
