--- a/src/scss/_header.scss
+++ b/src/scss/_header.scss
@@ -3,7 +3,7 @@
 	z-index: 9;
 	display: flex;
 	justify-content: center;
-	padding: 15px;
+	padding: 15px 0;
 	background-color: $white;
 	box-shadow: 0px 10px 20px rgba(31, 33, 65, 0.05);
 
@@ -38,21 +38,25 @@
 		display: flex;
 		align-items: center;
 
-		@include media(sm) {
-			position: absolute;
+		@include media(md) {
+			position: fixed;
 			z-index: 4;
 			top: 0;
 			right: 0;
-			transform: translateX(100vw);
-			display: block;
+			display: none;
 			width: 100%;
 			height: 100vh;
 			padding: 70px 24px 20px;
 			background-color: $white;
+			opacity: 0;
+			transition: opacity 0.3s ease;
 
-			&_translate {
-				transform: translateX(0);
-				transition: transform .2s ease-in;
+			&_display {
+				display: block;
+			}
+
+			&_visible {
+				opacity: 1;
 			}
 		}
 	}
@@ -61,7 +65,7 @@
 		display: block;
 		margin-right: 20px;
 
-		@include media(sm) {
+		@include media(md) {
 			margin-right: 0;
 			margin-bottom: 20px;
 		}
@@ -80,7 +84,7 @@
 .header-menu {
 	display: flex;
 
-	@include media(sm) {
+	@include media(md) {
 		display: block;
 	}
 
@@ -90,7 +94,7 @@
 		margin-right: 20px;
 		line-height: 1;
 
-		@include media(sm) {
+		@include media(md) {
 			margin-right: 0;
 			margin-bottom: 10px;
 		}
@@ -124,7 +128,7 @@
 				}
 			}
 
-			@include media(sm) {
+			@include media(md) {
 				padding-right: 0;
 				&::after {
 					content: none;
@@ -168,7 +172,7 @@
 		left: 50%;
 		transform: translate(-50%, 100%);
 
-		@include media(sm) {
+		@include media(md) {
 			position: relative;
 			bottom: auto;
 			left: auto;
@@ -189,7 +193,7 @@
 	opacity: 0;
 	transition: opacity .3s ease;
 
-	@include media(sm) {
+	@include media(md) {
 		visibility: visible;
 		opacity: 1;
 		border: none;
