return old burger thx git history

--- a/src/pug/components/sign-in.pug
+++ b/src/pug/components/sign-in.pug
@@ -1,9 +1,9 @@
 form.form(action="#")
 	h1.form__title Войти
 	.form__formfield.formfield
-		input.formfield__input#email(type="email", name="email-registr", placeholder="Email", tabindex="1")
+		input.formfield__input#email-sign-in(type="email", name="email-sign-in", placeholder="Email", tabindex="1")
 	.form__formfield.formfield
-		input.formfield__input#password(type="password", name="password", placeholder="Пароль", tabindex="2")
+		input.formfield__input#password-sign-in(type="password", name="password-sign-in", placeholder="Пароль", tabindex="2")
 	.form__submit
 		button.btn.btn_fill.btn_with-arrow(type="submit", tabindex="3")
 			span войти
