--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -1,6 +1,6 @@
 @import "~slick-carousel/slick/slick.scss";
 @import "vars";
-// @import "fonts";
+@import "fonts";
 @import "ui";
 @import "header";
 @import "burger";
@@ -10,4 +10,5 @@
 @import "home";
 @import "sliders";
 @import "room-info";
+@import "landing-page";
 @import "footer";
