--- a/src/pug/pages/index.pug
+++ b/src/pug/pages/index.pug
@@ -2,3 +2,6 @@ extends ../main-layout.pug
 
 block main
 	main.main
+		section.main-preview
+			img.main-preview__img(src="img/landing-page/main.jpg", alt="" srcset="main@2x.jpg 2x, main@3x.jpg 3x")
+			p.main-preview__desc Лучшие номера для вашей работы, отдыха и просто вдохновения
