--- a/src/pug/components/footer.pug
+++ b/src/pug/components/footer.pug
@@ -1,1 +1,69 @@
 footer.footer
+	.footer-nav
+		.container
+			.row
+				.col-12.col-lg-3
+					a.footer__logo(href="/")
+						img(src="img/logo.svg", alt="TOXIN")
+					.footer__content
+						p Бронирование номеров в лучшем отеле 2019 года по версии ассоциации «Отельные взгляды»
+				.col-lg-2
+					.footer__col.footer-col
+						a.footer-col__title.h3(href="#") навигация
+						ul.footer-list
+							li.footer-list__item
+								a.footer-list__link(href="#") О нас
+							li.footer-list__item
+								a.footer-list__link(href="#") Новости
+							li.footer-list__item
+								a.footer-list__link(href="#") Служба поддержки
+							li.footer-list__item
+								a.footer-list__link(href="#") Услуги
+				.col-lg-2
+					.footer__col.footer-col
+						a.footer-col__title.h3(href="#") о нас
+						ul.footer-list
+							li.footer-list__item
+								a.footer-list__link(href="#") О сервисе
+							li.footer-list__item
+								a.footer-list__link(href="#") Наша команда
+							li.footer-list__item
+								a.footer-list__link(href="#") Вакансии
+							li.footer-list__item
+								a.footer-list__link(href="#") Инвесторы
+				.col-lg-2
+					.footer__col.footer-col
+						a.footer-col__title.h3(href="#") Служба поддержки
+						ul.footer-list
+							li.footer-list__item
+								a.footer-list__link(href="#") Соглашения
+							li.footer-list__item
+								a.footer-list__link(href="#") Сообщества
+							li.footer-list__item
+								a.footer-list__link(href="#") Связь с нами
+				.col-lg-3
+					.footer__col.footer-col
+						h3.footer-col__title(href="#") Подписка
+						.footer__content
+							P Получайте специальные предложения и новости сервиса
+						.footer__subscribe.subscribe
+							.formfield
+								input.formfield__input.formfield__input_with-btn#subscribe(type="email", name="subscribe", placeholder="Email")
+								button.subscribe__submit
+	.footer-copyright
+		.container
+			.row
+				.col-12
+					.footer-copyright__wrap
+						.footer-copyright__desc
+							p Copyright © 2018 Toxin отель. Все права зачищены.
+						ul.footer-copyright__soc.footer-soc
+							li.footer-soc__item
+								a.footer-soc__link(href="#")
+									img(src="img/soc/tw.svg", alt="")
+							li.footer-soc__item
+								a.footer-soc__link(href="#")
+									img(src="img/soc/fb.svg", alt="")
+							li.footer-soc__item
+								a.footer-soc__link(href="#")
+									img(src="img/soc/inst.svg", alt="")
