--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -12,3 +12,6 @@
 @import "room-info";
 @import "landing-page";
 @import "footer";
+@import "filter-page";
+@import "no-ui-slider";
+@import "result-card";
